Reorders methods by CRUD